--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/seo/favicon.webp" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Codify Dolboor</title>
+    <meta
+      name="description"
+      content="Галерея финальных проектов студентов IT Академии Codify"
+    />
+    <link rel="icon" type="image/svg+xml" href="/seo/favicon.webp" />
   </head>
   <body>
     <div id="root"></div>
